--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "mapy",
   "version": "0.1.0",
   "description": "A Markdown Editor and Viewer.",
-  "main": "app.js",
+  "main": "app/main.js",
   "scripts": {
+    "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Camille",
-  "license": "GPL-3.0-or-later"
+  "license": "GPL-3.0-or-later",
+  "dependencies": {
+    "electron": "^27.0.0"
+  }
 }
