--- a/package.json
+++ b/package.json
@@ -4,16 +4,33 @@
   "description": "A Markdown Editor and Viewer.",
   "main": "app/main.js",
   "scripts": {
-    "start": "electron .",
+    "start": "cls && electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Camille",
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "asciidoctor": "^3.0.0",
+    "blob-stream": "^0.1.3",
+    "canvas2pdf": "^1.0.7",
     "codemirror": "^6.0.1",
     "electron": "^27.0.0",
+    "electron-store": "^8.1.0",
+    "file-saver": "^2.0.5",
+    "highlight.js": "^11.9.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "latex.js": "^0.12.6",
+    "mammoth": "^1.6.0",
     "marked": "^9.1.2",
     "mathjax": "^3.2.2",
-    "pdfjs": "^2.5.2"
+    "npm-creole": "^0.3.6",
+    "opensheetmusicdisplay": "^1.8.4",
+    "pdfjs": "^2.5.2",
+    "rehype-stringify": "^10.0.0",
+    "remark": "^15.0.1",
+    "remark-rehype": "^11.0.0",
+    "textile-js": "^2.1.1",
+    "wordcloud": "^1.2.2"
   }
 }
