--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "blob-stream": "^0.1.3",
     "canvas2pdf": "^1.0.7",
     "codemirror": "^6.0.1",
+    "drag-drop": "^7.2.0",
     "electron": "^27.0.0",
+    "electron-is": "^3.0.0",
     "electron-store": "^8.1.0",
     "file-saver": "^2.0.5",
     "highlight.js": "^11.9.0",
