--- a/package.json
+++ b/package.json
@@ -20,15 +20,17 @@
     "electron": "^27.0.0",
     "electron-is": "^3.0.0",
     "electron-store": "^8.1.0",
+    "electron-tabs": "^1.0.2",
     "file-saver": "^2.0.5",
     "highlight.js": "^11.9.0",
     "hotkeys-js": "^3.12.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "katex": "^0.16.9",
     "latex.js": "^0.12.6",
     "mammoth": "^1.6.0",
     "marked": "^9.1.2",
-    "mathjax": "^3.2.2",
+    "mousetrap": "^1.6.5",
     "npm-creole": "^0.3.6",
     "opensheetmusicdisplay": "^1.8.4",
     "pdfjs": "^2.5.2",
