--- a/package.json
+++ b/package.json
@@ -42,5 +42,13 @@
     "textile-js": "^2.1.1",
     "tippy.js": "^6.3.7",
     "wordcloud": "^1.2.2"
+  },
+  "devDependencies": {
+    "ts-loader": "^9.5.0",
+    "tslint": "^5.20.1",
+    "tslint-config-standard": "^9.0.0",
+    "tslint-loader": "^3.5.4",
+    "typescript": "^3.9.10",
+    "webpack": "^5.89.0"
   }
 }
