--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Camille",
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "@codemirror/lang-markdown": "^6.2.2",
     "asciidoctor": "^3.0.0",
     "blob-stream": "^0.1.3",
     "canvas2pdf": "^1.0.7",
@@ -25,6 +26,7 @@
     "highlight.js": "^11.9.0",
     "hotkeys-js": "^3.12.0",
     "html2canvas": "^1.4.1",
+    "iconify-icon": "^1.0.8",
     "jspdf": "^2.5.1",
     "katex": "^0.16.9",
     "latex.js": "^0.12.6",
