Update: Migrate Markdown engine from marked to markdown-it

--- a/package.json
+++ b/package.json
@@ -22,16 +22,21 @@
     "electron-is": "^3.0.0",
     "electron-store": "^8.1.0",
     "electron-tabs": "^1.0.2",
+    "fabric": "^5.3.0",
     "file-saver": "^2.0.5",
+    "fontmin": "^1.0.1",
     "highlight.js": "^11.9.0",
     "hotkeys-js": "^3.12.0",
     "html2canvas": "^1.4.1",
     "iconify-icon": "^1.0.8",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.7.0",
     "katex": "^0.16.9",
     "latex.js": "^0.12.6",
     "mammoth": "^1.6.0",
-    "marked": "^9.1.2",
+    "mark.js": "^8.11.1",
+    "markdown-it": "^13.0.2",
+    "markdown-it-replace-link": "^1.2.0",
     "mousetrap": "^1.6.5",
     "npm-creole": "^0.3.6",
     "opensheetmusicdisplay": "^1.8.4",
@@ -43,6 +48,7 @@
     "segmentit": "^2.0.3",
     "textile-js": "^2.1.1",
     "tippy.js": "^6.3.7",
+    "vanilla-context-menu": "^1.6.0",
     "wordcloud": "^1.2.2"
   },
   "devDependencies": {
