Update: Support formula renderring

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "file-saver": "^2.0.5",
     "fontmin": "^1.0.1",
     "highlight.js": "^11.9.0",
+    "highlightjs-cypher": "^1.1.5",
+    "highlightjs-line-numbers.js": "^2.8.0",
     "hotkeys-js": "^3.12.0",
     "html2canvas": "^1.4.1",
     "iconify-icon": "^1.0.8",
@@ -36,7 +38,9 @@
     "mammoth": "^1.6.0",
     "mark.js": "^8.11.1",
     "markdown-it": "^13.0.2",
+    "markdown-it-highlightjs": "^4.0.1",
     "markdown-it-replace-link": "^1.2.0",
+    "markdown-it-texmath": "^1.0.0",
     "mousetrap": "^1.6.5",
     "npm-creole": "^0.3.6",
     "opensheetmusicdisplay": "^1.8.4",
