Update: Support easy and flexible syntax to create tables

--- a/package.json
+++ b/package.json
@@ -38,9 +38,12 @@
     "mammoth": "^1.6.0",
     "mark.js": "^8.11.1",
     "markdown-it": "^13.0.2",
+    "markdown-it-easy-tables": "^0.1.1",
     "markdown-it-emoji": "^2.0.2",
     "markdown-it-highlightjs": "^4.0.1",
+    "markdown-it-multimd-table": "^4.2.3",
     "markdown-it-replace-link": "^1.2.0",
+    "markdown-it-table": "^4.1.1",
     "markdown-it-table-of-contents": "^0.6.0",
     "markdown-it-texmath": "^1.0.0",
     "mousetrap": "^1.6.5",
