--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "@codemirror/lang-markdown": "^6.2.2",
+    "@datatraccorporation/markdown-it-mermaid": "^0.5.0",
+    "@liradb2000/markdown-it-mermaid": "^0.4.4",
     "asciidoctor": "^3.0.0",
     "blob-stream": "^0.1.3",
     "canvas2pdf": "^1.0.7",
@@ -41,12 +43,17 @@
     "markdown-it-easy-tables": "^0.1.1",
     "markdown-it-emoji": "^2.0.2",
     "markdown-it-highlightjs": "^4.0.1",
+    "markdown-it-imsize": "^2.0.1",
     "markdown-it-multimd-table": "^4.2.3",
+    "markdown-it-named-code-blocks": "^0.2.0",
+    "markdown-it-obsidian-images": "^1.0.1",
     "markdown-it-replace-link": "^1.2.0",
     "markdown-it-table": "^4.1.1",
     "markdown-it-table-of-contents": "^0.6.0",
     "markdown-it-task-lists": "^2.1.1",
     "markdown-it-texmath": "^1.0.0",
+    "markdown-it-textual-uml": "^0.16.0",
+    "mermaid": "^10.6.0",
     "mousetrap": "^1.6.5",
     "npm-creole": "^0.3.6",
     "opensheetmusicdisplay": "^1.8.4",
