--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@codemirror/lang-markdown": "^6.2.2",
     "@datatraccorporation/markdown-it-mermaid": "^0.5.0",
+    "@gerhobbelt/markdown-it-container": "^3.0.0-10",
     "@liradb2000/markdown-it-mermaid": "^0.4.4",
     "asciidoctor": "^3.0.0",
     "blob-stream": "^0.1.3",
@@ -40,14 +41,25 @@
     "mammoth": "^1.6.0",
     "mark.js": "^8.11.1",
     "markdown-it": "^13.0.2",
+    "markdown-it-abbr": "^1.0.4",
+    "markdown-it-adobe-plugin": "^1.1.7",
+    "markdown-it-anchor": "^8.6.7",
+    "markdown-it-deflist": "^2.1.0",
     "markdown-it-easy-tables": "^0.1.1",
     "markdown-it-emoji": "^2.0.2",
+    "markdown-it-expandable": "^1.0.2",
+    "markdown-it-fancy-lists": "^1.2.3",
+    "markdown-it-fontawesome": "^0.3.0",
+    "markdown-it-front-matter": "^0.2.3",
     "markdown-it-highlightjs": "^4.0.1",
     "markdown-it-imsize": "^2.0.1",
+    "markdown-it-include": "^2.0.0",
+    "markdown-it-ins": "^3.0.1",
     "markdown-it-multimd-table": "^4.2.3",
     "markdown-it-named-code-blocks": "^0.2.0",
     "markdown-it-obsidian-images": "^1.0.1",
     "markdown-it-replace-link": "^1.2.0",
+    "markdown-it-ruby": "^0.1.1",
     "markdown-it-table": "^4.1.1",
     "markdown-it-table-of-contents": "^0.6.0",
     "markdown-it-task-lists": "^2.1.1",
