--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@gerhobbelt/markdown-it-container": "^3.0.0-10",
     "@liradb2000/markdown-it-mermaid": "^0.4.4",
     "asciidoctor": "^3.0.0",
+    "assist-worker": "^1.1.0",
     "blob-stream": "^0.1.3",
     "canvas2pdf": "^1.0.7",
     "codemirror": "^6.0.1",
     "d3": "^7.8.5",
+    "d3-cloud": "^1.2.7",
     "drag-drop": "^7.2.0",
     "dropzone": "^6.0.0-beta.2",
     "electron": "^27.0.0",
@@ -50,16 +52,23 @@
     "markdown-it-expandable": "^1.0.2",
     "markdown-it-fancy-lists": "^1.2.3",
     "markdown-it-fontawesome": "^0.3.0",
+    "markdown-it-footnote": "^3.0.3",
     "markdown-it-front-matter": "^0.2.3",
     "markdown-it-highlightjs": "^4.0.1",
+    "markdown-it-html5-media": "^0.7.1",
+    "markdown-it-implicit-figures": "^0.12.0",
     "markdown-it-imsize": "^2.0.1",
     "markdown-it-include": "^2.0.0",
     "markdown-it-ins": "^3.0.1",
+    "markdown-it-mark": "^3.0.1",
     "markdown-it-multimd-table": "^4.2.3",
     "markdown-it-named-code-blocks": "^0.2.0",
     "markdown-it-obsidian-images": "^1.0.1",
     "markdown-it-replace-link": "^1.2.0",
     "markdown-it-ruby": "^0.1.1",
+    "markdown-it-smartarrows": "^1.0.1",
+    "markdown-it-sub": "^1.0.0",
+    "markdown-it-sup": "^1.0.0",
     "markdown-it-table": "^4.1.1",
     "markdown-it-table-of-contents": "^0.6.0",
     "markdown-it-task-lists": "^2.1.1",
@@ -78,8 +87,7 @@
     "textile-js": "^2.1.1",
     "tippy.js": "^6.3.7",
     "twemoji": "^14.0.2",
-    "vanilla-context-menu": "^1.6.0",
-    "wordcloud": "^1.2.2"
+    "vanilla-context-menu": "^1.6.0"
   },
   "devDependencies": {
     "electron-builder": "^24.6.4",
