Fix: The relative path of media files can now be processed correctly

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "hotkeys-js": "^3.12.0",
     "html2canvas": "^1.4.1",
     "iconify-icon": "^1.0.8",
+    "isurl": "^4.0.2",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.7.0",
     "katex": "^0.16.9",
@@ -61,6 +62,7 @@
     "markdown-it-include": "^2.0.0",
     "markdown-it-ins": "^3.0.1",
     "markdown-it-mark": "^3.0.1",
+    "markdown-it-modify-token": "^1.0.2",
     "markdown-it-multimd-table": "^4.2.3",
     "markdown-it-named-code-blocks": "^0.2.0",
     "markdown-it-obsidian-images": "^1.0.1",
