--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "@codemirror/lang-markdown": "^6.2.2",
+    "@codemirror/theme-one-dark": "^6.1.2",
     "@datatraccorporation/markdown-it-mermaid": "^0.5.0",
     "@gerhobbelt/markdown-it-container": "^3.0.0-10",
     "@liradb2000/markdown-it-mermaid": "^0.4.4",
@@ -36,6 +37,7 @@
     "fontmin": "^1.0.1",
     "highlight.js": "^11.9.0",
     "highlightjs-cypher": "^1.1.5",
+    "hotkeys-js": "^3.12.0",
     "html2canvas": "^1.4.1",
     "iconify-icon": "^1.0.8",
     "isurl": "^4.0.2",
@@ -89,6 +91,7 @@
     "textile-js": "^2.1.1",
     "tippy.js": "^6.3.7",
     "twemoji": "^14.0.2",
+    "v8-compile-cache": "^2.4.0",
     "vanilla-context-menu": "^1.6.0"
   },
   "devDependencies": {
