Fix: Improve scrollbar style

--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "appId": "com.tanpero.mapy",
     "productName": "Mapy",
     "nsis": {
-      "oneClick": false, 
-      "allowElevation": true, 
-      "allowToChangeInstallationDirectory": true, 
+      "oneClick": false,
+      "allowElevation": true,
+      "allowToChangeInstallationDirectory": true,
       "installerIcon": "logo.ico",
       "uninstallerIcon": "logo.ico",
       "installerHeaderIcon": "logo.ico",
-      "createDesktopShortcut": true, 
+      "createDesktopShortcut": true,
       "createStartMenuShortcut": true,
       "shortcutName": "Mapy"
     }
@@ -51,6 +51,7 @@
     "highlightjs-cypher": "^1.1.5",
     "hotkeys-js": "^3.12.0",
     "html2canvas": "^1.4.1",
+    "i": "^0.3.7",
     "iconify-icon": "^1.0.8",
     "isurl": "^4.0.2",
     "jspdf": "^2.5.1",
@@ -62,10 +63,10 @@
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-adobe-plugin": "^1.1.7",
     "markdown-it-anchor": "^8.6.7",
+    "markdown-it-collapsible": "^2.0.0",
     "markdown-it-deflist": "^2.1.0",
     "markdown-it-easy-tables": "^0.1.1",
     "markdown-it-emoji": "^2.0.2",
-    "markdown-it-expandable": "^1.0.2",
     "markdown-it-fancy-lists": "^1.2.3",
     "markdown-it-fontawesome": "^0.3.0",
     "markdown-it-footnote": "^3.0.3",
@@ -93,6 +94,7 @@
     "markdown-it-textual-uml": "^0.16.0",
     "mermaid": "^10.6.0",
     "mousetrap": "^1.6.5",
+    "npm": "^10.2.1",
     "npm-creole": "^0.3.6",
     "opensheetmusicdisplay": "^1.8.4",
     "rehype-stringify": "^10.0.0",
