--- a/package.json
+++ b/package.json
@@ -27,18 +27,20 @@
     "icon": "logo.ico"
   },
   "dependencies": {
+    "@arothuis/markdown-it-biblatex": "^1.0.1",
     "@codemirror/lang-markdown": "^6.2.2",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@datatraccorporation/markdown-it-mermaid": "^0.5.0",
     "@gerhobbelt/markdown-it-container": "^3.0.0-10",
+    "@gerhobbelt/markdown-it-inline-text-color": "^1.0.1-1",
     "@liradb2000/markdown-it-mermaid": "^0.4.4",
+    "@mdit/plugin-tab": "^0.5.2",
     "asciidoctor": "^3.0.0",
     "assist-worker": "^1.1.0",
     "blob-stream": "^0.1.3",
     "codemirror": "^6.0.1",
     "d3": "^7.8.5",
     "d3-cloud": "^1.2.7",
-    "dmg-license": "^1.0.11",
     "drag-drop": "^7.2.0",
     "dropzone": "^6.0.0-beta.2",
     "electron-is": "^3.0.0",
@@ -62,6 +64,7 @@
     "markdown-it-adobe-plugin": "^1.1.7",
     "markdown-it-anchor": "^8.6.7",
     "markdown-it-collapsible": "^2.0.0",
+    "markdown-it-complex-table": "^1.0.0",
     "markdown-it-deflist": "^2.1.0",
     "markdown-it-easy-tables": "^0.1.1",
     "markdown-it-emoji": "^2.0.2",
@@ -80,16 +83,18 @@
     "markdown-it-multimd-table": "^4.2.3",
     "markdown-it-named-code-blocks": "^0.2.0",
     "markdown-it-obsidian-images": "^1.0.1",
+    "markdown-it-raw-table": "^1.0.0",
     "markdown-it-replace-link": "^1.2.0",
     "markdown-it-ruby": "^0.1.1",
+    "markdown-it-small": "^1.0.0",
     "markdown-it-smartarrows": "^1.0.1",
     "markdown-it-sub": "^1.0.0",
     "markdown-it-sup": "^1.0.0",
     "markdown-it-table": "^4.1.1",
-    "markdown-it-table-of-contents": "^0.6.0",
     "markdown-it-task-lists": "^2.1.1",
     "markdown-it-texmath": "^1.0.0",
     "markdown-it-textual-uml": "^0.16.0",
+    "markdown-it-toc-done-right": "^4.2.0",
     "mermaid": "^10.6.0",
     "mousetrap": "^1.6.5",
     "npm": "^10.2.1",
