--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "markdown-it-named-code-blocks": "^0.2.0",
     "markdown-it-obsidian-images": "^1.0.1",
     "markdown-it-raw-table": "^1.0.0",
+    "markdown-it-replace-it": "^1.0.0",
     "markdown-it-replace-link": "^1.2.0",
     "markdown-it-ruby": "^0.1.1",
     "markdown-it-small": "^1.0.0",
