Fix: Use native dark mode

--- a/package.json
+++ b/package.json
@@ -62,9 +62,9 @@
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-adobe-plugin": "^1.1.7",
     "markdown-it-anchor": "^8.6.7",
+    "markdown-it-checkbox": "^1.1.0",
     "markdown-it-collapsible": "^2.0.0",
     "markdown-it-complex-table": "^1.0.0",
-    "markdown-it-deflist": "^2.1.0",
     "markdown-it-easy-tables": "^0.1.1",
     "markdown-it-emoji": "^2.0.2",
     "markdown-it-fancy-lists": "^1.2.3",
@@ -77,7 +77,9 @@
     "markdown-it-imsize": "^2.0.1",
     "markdown-it-include": "^2.0.0",
     "markdown-it-ins": "^3.0.1",
+    "markdown-it-kbd": "^2.2.2",
     "markdown-it-mark": "^3.0.1",
+    "markdown-it-marked": "^0.3.3",
     "markdown-it-modify-token": "^1.0.2",
     "markdown-it-multimd-table": "^4.2.3",
     "markdown-it-named-code-blocks": "^0.2.0",
