--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "@codemirror/lang-markdown": "^6.2.2",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@datatraccorporation/markdown-it-mermaid": "^0.5.0",
-    "@gerhobbelt/markdown-it-container": "^3.0.0-10",
     "@gerhobbelt/markdown-it-inline-text-color": "^1.0.1-1",
     "@liradb2000/markdown-it-mermaid": "^0.4.4",
     "@mdit/plugin-tab": "^0.5.2",
@@ -65,6 +64,7 @@
     "markdown-it-checkbox": "^1.1.0",
     "markdown-it-collapsible": "^2.0.0",
     "markdown-it-complex-table": "^1.0.0",
+    "markdown-it-container": "^3.0.0",
     "markdown-it-easy-tables": "^0.1.1",
     "markdown-it-emoji": "^2.0.2",
     "markdown-it-fancy-lists": "^1.2.3",
