--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-adobe-plugin": "^1.1.7",
     "markdown-it-anchor": "^8.6.7",
+    "markdown-it-bidi": "^0.1.0",
     "markdown-it-checkbox": "^1.1.0",
     "markdown-it-collapsible": "^2.0.0",
     "markdown-it-complex-table": "^1.0.0",
@@ -75,6 +76,7 @@
     "markdown-it-implicit-figures": "^0.12.0",
     "markdown-it-imsize": "^2.0.1",
     "markdown-it-include": "^2.0.0",
+    "markdown-it-inject-linenumbers": "^0.3.0",
     "markdown-it-ins": "^3.0.1",
     "markdown-it-kbd": "^2.2.2",
     "markdown-it-mark": "^3.0.1",
@@ -96,6 +98,7 @@
     "markdown-it-texmath": "^1.0.0",
     "markdown-it-textual-uml": "^0.16.0",
     "markdown-it-toc-done-right": "^4.2.0",
+    "markvis": "^0.0.13",
     "mermaid": "^10.6.0",
     "mousetrap": "^1.6.5",
     "npm": "^10.2.1",
