--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@datatraccorporation/markdown-it-mermaid": "^0.5.0",
     "@gerhobbelt/markdown-it-inline-text-color": "^1.0.1-1",
     "@liradb2000/markdown-it-mermaid": "^0.4.4",
+    "@luckrya/markdown-it-link-to-card": "^0.3.3",
     "@mdit/plugin-tab": "^0.5.2",
     "asciidoctor": "^3.0.0",
     "assist-worker": "^1.1.0",
