--- a/package.json
+++ b/package.json
@@ -35,28 +35,22 @@
     "@liradb2000/markdown-it-mermaid": "^0.4.4",
     "@luckrya/markdown-it-link-to-card": "^0.3.3",
     "@mdit/plugin-tab": "^0.5.2",
+    "@wekanteam/markdown-it-mermaid": "^0.6.4",
     "asciidoctor": "^3.0.0",
     "assist-worker": "^1.1.0",
     "blob-stream": "^0.1.3",
     "codemirror": "^6.0.1",
     "d3": "^7.8.5",
-    "drag-drop": "^7.2.0",
-    "dropzone": "^6.0.0-beta.2",
-    "electron-is": "^3.0.0",
-    "electron-store": "^8.1.0",
     "file-saver": "^2.0.5",
     "fontmin": "^1.0.1",
     "highlight.js": "^11.9.0",
     "highlightjs-cypher": "^1.1.5",
     "html2canvas": "^1.4.1",
-    "i": "^0.3.7",
     "iconify-icon": "^1.0.8",
-    "isurl": "^4.0.2",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.7.0",
     "katex": "^0.16.9",
     "mammoth": "^1.6.0",
-    "mark.js": "^8.11.1",
     "markdown-it": "^13.0.2",
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-adobe-plugin": "^1.1.7",
@@ -103,14 +97,9 @@
     "markdown-it-textual-uml": "^0.16.0",
     "markdown-it-toc-done-right": "^4.2.0",
     "markvis": "^0.0.13",
-    "mermaid": "^10.6.0",
     "mousetrap": "^1.6.5",
-    "npm": "^10.2.1",
-    "npm-creole": "^0.3.6",
     "opensheetmusicdisplay": "^1.8.4",
     "rehype-stringify": "^10.0.0",
-    "remark": "^15.0.1",
-    "remark-rehype": "^11.0.0",
     "segmentit": "^2.0.3",
     "textile-js": "^2.1.1",
     "tippy.js": "^6.3.7",
