Update: Add codeblock automatic copyability

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "markdown-it-colorful-checkbox": "^1.0.2",
     "markdown-it-complex-table": "^1.0.0",
     "markdown-it-container": "^3.0.0",
+    "markdown-it-copy": "^1.2.0",
     "markdown-it-easy-tables": "^0.1.1",
     "markdown-it-emoji": "^2.0.2",
     "markdown-it-fancy-lists": "^1.2.3",
