Update: Improve the way to use inline color

--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "@codemirror/lang-markdown": "^6.2.2",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@datatraccorporation/markdown-it-mermaid": "^0.5.0",
-    "@gerhobbelt/markdown-it-inline-text-color": "^1.0.1-1",
     "@liradb2000/markdown-it-mermaid": "^0.4.4",
     "@luckrya/markdown-it-link-to-card": "^0.3.3",
     "@mdit/plugin-tab": "^0.5.2",
@@ -58,6 +57,7 @@
     "markdown-it-bidi": "^0.1.0",
     "markdown-it-checkbox": "^1.1.0",
     "markdown-it-collapsible": "^2.0.0",
+    "markdown-it-color": "^2.1.1",
     "markdown-it-colorful-checkbox": "^1.0.2",
     "markdown-it-complex-table": "^1.0.0",
     "markdown-it-container": "^3.0.0",
@@ -97,6 +97,7 @@
     "markdown-it-texmath": "^1.0.0",
     "markdown-it-textual-uml": "^0.16.0",
     "markdown-it-toc-done-right": "^4.2.0",
+    "markdown-it-twemoji": "^1.5.0",
     "markvis": "^0.0.13",
     "mousetrap": "^1.6.5",
     "opensheetmusicdisplay": "^1.8.4",
