--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "markdown-it-anchor": "^8.6.7",
     "markdown-it-bidi": "^0.1.0",
     "markdown-it-checkbox": "^1.1.0",
+    "markdown-it-codetabs": "^1.2.0",
     "markdown-it-collapsible": "^2.0.0",
     "markdown-it-color": "^2.1.1",
     "markdown-it-colorful-checkbox": "^1.0.2",
