Fix: Improve the logic for validating url

--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "markdown-it-named-code-blocks": "^0.2.0",
     "markdown-it-obsidian-images": "^1.0.1",
     "markdown-it-raw-table": "^1.0.0",
+    "markdown-it-relativelink": "^0.4.2",
     "markdown-it-replace-it": "^1.0.0",
     "markdown-it-replace-link": "^1.2.0",
     "markdown-it-ruby": "^0.1.1",
