--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "markdown-it-toc-done-right": "^4.2.0",
     "markvis": "^0.0.13",
     "mousetrap": "^1.6.5",
+    "node-html-markdown": "^1.3.0",
     "opensheetmusicdisplay": "^1.8.4",
     "rehype-stringify": "^10.0.0",
     "segmentit": "^2.0.3",
