--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A Markdown Editor and Viewer.",
   "main": "app/main.js",
   "scripts": {
+    "clean": "rm -rf ./build",
+    "init": "npm run clean && mkdir ./build && cp ./app/*./build/",
     "start": "clear && electron .",
     "dist": "electron-builder"
   },
@@ -106,6 +108,8 @@
   "devDependencies": {
     "electron": "^27.0.0",
     "electron-builder": "^24.6.4",
+    "esbuild": "0.19.5",
+    "esbuild-css-modules-plugin": "^3.0.3",
     "ts-loader": "^9.5.0",
     "tslint": "^5.20.1",
     "tslint-config-standard": "^9.0.0",
