--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "node-html-markdown": "^1.3.0",
     "opensheetmusicdisplay": "^1.8.4",
     "rehype-stringify": "^10.0.0",
+    "rtf2html": "^1.0.0",
     "segmentit": "^2.0.3",
     "textile-js": "^2.1.1",
     "tippy.js": "^6.3.7",
